# pydrever

./: .gitignore  README.md  dikernel.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: workflow_testing.yml
csharphelpers/: LogHandler.cs  LogHandlerHelper.csproj  LogHandlerHelper.sln
design/: dikerosion.qea
dikerosion/calculation/: __init__.py
dikerosion/calculation/dikernel/: __init__.py  dikernel.py  (+3 more)
dikerosion/data/: __init__.py  dikernelcalculationsettings.py  dikernelinput.py  dikerneloutput.py  dikerneloutputspecification.py  dikernelrevetmentzonespecification.py  dikeschematization.py
dikerosion/dikernel/: __init__.py  dikernel.py  dikernelinputparser.py  dikerneloutputparser.py
dikerosion/io/: prflreader.py
dikerosion/visualization/: __init__.py  visualization_animated.py  visualization_damage.py
documentation/: dikerosion.qea
examples/: example_asphalt.ipynb  example_basic.ipynb  example_basic.py  example_elaborate.ipynb  example_elaborate.py  example_grass_wave_impact.ipynb  example_parallel_and_performance.ipynb  example_sensitivity.ipynb  example_sensitivity.py
examples/data/: DijkProject-uitvoer.json
examples/experiments/: experiment.py  experiment_bgd_deltaflume.py  run_experiment.py
pydrever/: __init__.py
pydrever/calculation/: __init__.py  _grassresistancetimescalculator.py  _hydrodynamicsinterpolation.py
pydrever/data/: __init__.py  _data_validation.py  _dikernelcalculationsettings.py  _dikernelinput.py  _dikerneloutput.py  _dikerneloutputspecification.py  _dikernelrevetmentzonespecification.py  _dikeschematization.py  _grassovertoppingcalculationtypes.py  _grasswaverunupcalculationtypes.py  _toplayertypes.py  calculationmethods.py  dikernelcalculationsettings.py  dikernelinput.py  dikerneloutput.py  dikerneloutputspecification.py  dikernelrevetmentzonespecification.py
pydrever/io/: __init__.py  _prflreader.py
pydrever/visualization/: __init__.py  _visualization_animated.py  _visualization_damage.py  visualization_damage.py
src/: calculationmethods.py  dikernel.py  dikernelcalculationsettings.py  dikernelcreferences.py  dikernelinput.py  dikernelinputparser.py  dikerneloutput.py  dikerneloutputlocations.py  dikerneloutputparser.py  dikerneloutputspecification.py  quantities.py  toplayertypes.py  visualization.py  visualization_animated.py
src/dikerneldll/: DiKErnel.Core.deps.json  DiKErnel.DomainLibrary.deps.json  DiKErnel.External.Overtopping.deps.json  DiKErnel.FunctionLibrary.deps.json  DiKErnel.Integration.deps.json  DiKErnel.KernelWrapper.Json.Input.deps.json  DiKErnel.KernelWrapper.Json.Output.deps.json  DiKErnel.Util.deps.json  dllDikesOvertopping.lib
test/: basictest.py  dikernelTest.py  test_basic.py  test_elaborate.py  testcalculation.py
test/data/: DijkProject.json
tests/calculation/: grass_time_line_calculator_test.py
tests/data/: dikerneloutput_test.py  dikernelrevetmentzonespecification_test.py
tests/io/: conftest.py  prflreader_test.py
(+25 files in other folders)
