[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrever"
version = "24.1.1"
authors = [
  { name="Pieter van Geer", email="pieter.vangeer@deltares.com" },
]
description = "Tools that facilitate analysis of dike safety against flooding."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 3",
    "Operating System :: Windows",
]

dependencies = [
"numpy",
"matplotlib",
"pythonnet"
]

[project.urls]
Homepage = "https://github.com/Deltares-research/dike-revetment-erosion-pytools.git"
Issues = "https://github.com/Deltares-research/dike-revetment-erosion-pytools/issues"

[tool.setuptools.package-data]
"*" = ["*.dll"]

[tools.setuptools]
packages = ["pydrever"]
package-dir = {"" = "pydrever"}