[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrever"
version = "24.1.1"
authors = [
  { name="Pieter van Geer", email="pieter.vangeer@deltares.com" },
]
description = "Tools that facilitate analysis of dike safety against flooding."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows",
]
license = {file = "LICENSE"}

dependencies = [
"numpy",
"matplotlib",
"pythonnet"
]

[project.urls]
Homepage = "https://github.com/Deltares-research/dike-revetment-erosion-pytools.git"
Issues = "https://github.com/Deltares-research/dike-revetment-erosion-pytools/issues"

[tool.setuptools.package-data]
"*" = ["*.dll"]

[tools.setuptools]
packages = ["pydrever"]
package-dir = {"" = "pydrever"}