[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrever"
version = "1.0.0"
authors = [
  { name="Pieter van Geer", email="pieter.vangeer@deltares.com" },
]
description = "Tools that facilitate analysis of dike safety against flooding."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows",
]
license = {file = "LICENSE"}

dependencies = [
"numpy",
"matplotlib",
"pythonnet",
"pydantic"
]

[project.urls]
Homepage = "https://github.com/Deltares-research/pydrever.git"
Issues = "https://github.com/Deltares-research/pydrever/issues"
Source = "https://github.com/Deltares-research/pydrever.git"

[tool.setuptools.package-data]
"*" = ["*.dll"]

[tools.setuptools]
packages = ["pydrever"]
package-dir = {"" = "pydrever"}